Starte HLA per Steam-URL im Workshop-Modus

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -53,8 +53,8 @@
                 <div class="hla-launch">
                     <button class="btn btn-secondary" onclick="startHla('normal','german')">HLA DE</button>
                     <button class="btn btn-secondary" onclick="startHla('normal','english')">HLA EN</button>
-                    <button class="btn btn-secondary" onclick="startHla('tools','german')">Tools DE</button>
-                    <button class="btn btn-secondary" onclick="startHla('tools','english')">Tools EN</button>
+                    <button class="btn btn-secondary" onclick="startHla('workshop','german')">Workshop DE</button>
+                    <button class="btn btn-secondary" onclick="startHla('workshop','english')">Workshop EN</button>
                 </div>
             </div>
 			
