--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -51,10 +51,19 @@
                 <button id="devToolsButton" class="btn btn-secondary" onclick="toggleDevTools()">🐞 DevTools</button>
                 <button class="btn btn-secondary" onclick="openDubbingLog()">📝 Protokoll</button>
                 <div class="hla-launch">
-                    <button class="btn btn-secondary" onclick="startHla('normal','german')">HLA DE</button>
-                    <button class="btn btn-secondary" onclick="startHla('normal','english')">HLA EN</button>
-                    <button class="btn btn-secondary" onclick="startHla('workshop','german')">Workshop DE</button>
-                    <button class="btn btn-secondary" onclick="startHla('workshop','english')">Workshop EN</button>
+                    <select id="modusSelect">
+                        <option value="normal">Spiel</option>
+                        <option value="workshop">Workshop</option>
+                    </select>
+                    <select id="spracheSelect">
+                        <option value="english">english</option>
+                        <option value="german">german</option>
+                    </select>
+                    <label>
+                        <input type="checkbox" id="mapCheckbox"> +map
+                    </label>
+                    <input type="text" id="mapSelect" placeholder="Level" style="width:140px">
+                    <button id="startButton" class="btn btn-secondary" onclick="startHla()">Starten</button>
                 </div>
             </div>
 			
