--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -151,7 +151,7 @@
         <th width="60">Upload</th>
         <th width="60">Dubbing</th>
         <th width="40">Dub-Status</th>
-        <th width="90" id="dubDownloadHeader" style="display:none;">Download DE</th>
+        <th width="90" id="dubDownloadHeader" class="hidden">Download DE</th>
         <th width="60">Historie</th>
         <th width="60">Bearbeiten</th>
         <th width="60">Löschen</th>
