feat: add subtitle search with closecaption loader

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -148,6 +148,7 @@
         <th class="sortable">Ordner</th>
         <th>EN Text</th>
         <th>DE Text</th>
+        <th width="40">UT-Suche</th>
         <th width="120" title="Pfad der EN- und DE-Datei">Pfad</th>
         <th width="60">Upload</th>
         <th width="60">Dubbing</th>
