Füge speicherbaren Video-Link hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -68,6 +68,10 @@
                     <input type="text" id="mapSelect" placeholder="Level" style="width:140px">
                     <button id="startButton" class="btn btn-secondary" onclick="startHla()">Starten</button>
                 </div>
+                <div class="video-launch">
+                    <input type="text" id="videoUrlInput" placeholder="Video-URL..." style="width:200px">
+                    <button class="btn btn-secondary" onclick="openVideoUrl()">Öffnen</button>
+                </div>
             </div>
 			
 <!-- =========================== PROJECT META BAR START =========================== -->
