feat: add video bookmark button

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -70,6 +70,7 @@
                 </div>
                 <div class="video-launch">
                     <input type="text" id="videoUrlInput" placeholder="Video-URL..." style="width:200px">
+                    <button id="addVideoBtn" class="btn btn-secondary">Hinzufügen</button>
                     <button class="btn btn-secondary" onclick="openVideoUrl()">Öffnen</button>
                 </div>
             </div>
@@ -532,6 +533,7 @@
     <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.40.5</a>
 
     <script src="src/main.js"></script>
+    <script src="renderer.js"></script>
 </body>
 </html>
 
