--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -48,9 +48,10 @@
                     </div>
                     <button id="devToolsButton" class="btn btn-secondary" onclick="toggleDevTools()">🐞 DevTools</button>
                     <button class="btn btn-secondary" onclick="openDubbingLog()">📝 Protokoll</button>
-                    <button id="openVideoManager" class="btn btn-secondary">Videos</button>
                 </div>
             </div>
+
+            <button id="openVideoManager" class="toolbar-btn">Videos</button>
 
             <!-- Spielstart-Leiste -->
             <div class="start-bar">
@@ -531,23 +532,18 @@
     <div id="toastContainer"></div>
 
     <!-- Video-Manager Dialog -->
-    <dialog id="videoMgrDialog">
-        <h3>Gespeicherte Videos</h3>
-        <table style="width:100%">
+    <dialog id="videoMgrDialog" class="video-dialog">
+        <h2>Gespeicherte Videos</h2>
+        <input id="videoFilter" placeholder="Suche …" />
+        <table id="videoTable">
             <thead>
                 <tr>
-                    <th>URL</th>
-                    <th>Letzte Zeit</th>
-                    <th></th>
-                    <th></th>
+                    <th>#</th><th>Titel</th><th>URL</th><th>Letzte Zeit</th><th>•</th>
                 </tr>
             </thead>
-            <tbody id="videoTableBody"></tbody>
+            <tbody></tbody>
         </table>
-        <div style="text-align:right;margin-top:10px;">
-            <button id="closePlayerBtn" class="btn btn-secondary">Schließen</button>
-            <button id="closeVideoMgr" class="btn btn-secondary">Schließen</button>
-        </div>
+        <button id="closeVideoDlg" class="primary">Schließen</button>
     </dialog>
 
     <!-- Versionsanzeige -->
