--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -542,7 +542,7 @@
                 <table id="videoTable">
                     <thead>
                         <tr>
-                            <th data-asc="true">#</th>
+                            <th data-asc="true">Bild</th>
                             <th>Titel</th>
                             <th>Letzte Zeit</th>
                             <th>•</th>
