Füge Exportfunktion und Such-Cache im Video-Manager hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -537,6 +537,7 @@
                         <div class="video-launch-buttons">
                             <button id="addVideoBtn" class="btn">+ Hinzufügen</button>
                             <button id="openVideoBtn" class="btn btn-blue" onclick="openVideoUrl()">🔗 Öffnen</button>
+                            <button id="exportVideoBtn" class="btn">⭳ Export</button>
                         </div>
                         <input type="text" id="videoUrlInput" placeholder="Video-URL...">
                     </div>
