Verbesserte OCR-Steuerung mit neuem Overlay

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -569,13 +569,13 @@
                     <input type="range" id="videoSlider" value="0" min="0" step="1">
                     <span id="videoDuration">0:00</span>
                     <button id="videoReload">🔄</button>
-                    <button id="ocrToggle" title="OCR aktivieren (F9)">🅾️</button>
+                    <button id="ocrToggle" title="OCR an/aus (F9)">🔍</button>
                     <button id="videoDelete">🗑️</button>
                     <button id="videoClose">❌</button>
                 </div>
                 <div id="ocrOverlay"></div>
                 <div id="ocrResultPanel">
-                    <textarea id="ocrText" rows="10" readonly></textarea>
+                    <pre id="ocrText"></pre>
                 </div>
             </div>
         </div>
