--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -6,7 +6,7 @@
     <title>Half-Life: Alyx Translation Tool</title>
     <!-- Sicherheitsrichtlinie für Electron: verhindert Warnhinweise -->
     <!-- CSP angepasst: erlaubt nun Inline-Skripte -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob:; img-src 'self' https://i.ytimg.com; connect-src 'self' https://api.elevenlabs.io; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://www.youtube.com https://cdn.jsdelivr.net; worker-src 'self' blob: https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; media-src 'self' blob:; frame-src https://www.youtube.com https://www.youtube-nocookie.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob:; img-src 'self' https://i.ytimg.com; connect-src 'self' data: https://api.elevenlabs.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com https://www.youtube.com https://cdn.jsdelivr.net; worker-src 'self' blob: https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; media-src 'self' blob:; frame-src https://www.youtube.com https://www.youtube-nocookie.com;">
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
