--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Half-Life: Alyx Translation Tool</title>
     <!-- Sicherheitsrichtlinie für Electron: verhindert Warnhinweise -->
-    <!-- CSP angepasst: erlaubt Inline-Skripte, Tesseract-Downloads und Worker vom eigenen Ursprung -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob:; img-src 'self' https://i.ytimg.com; connect-src 'self' data: https://api.elevenlabs.io https://tessdata.projectnaptha.com; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://www.youtube.com https://cdn.jsdelivr.net; worker-src 'self'; style-src 'self' 'unsafe-inline'; media-src 'self' blob:; frame-src https://www.youtube.com https://www.youtube-nocookie.com;">
+    <!-- Angepasste CSP: Blob-Worker für Tesseract ohne 'unsafe-eval' zulassen -->
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self';
+                   script-src 'self';
+                   style-src 'self' 'unsafe-inline';
+                   img-src 'self' data:;
+                   worker-src 'self' blob:;">
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
