--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -8,8 +8,9 @@
     <!-- Aktualisierte CSP: Erlaubt YouTube und Blob-Worker -->
     <meta http-equiv="Content-Security-Policy"
           content="default-src 'self';
-                   script-src  'self' https://www.youtube.com https://www.youtube-nocookie.com;
+                   script-src  'self' 'wasm-unsafe-eval' https://www.youtube.com https://www.youtube-nocookie.com;
                    worker-src  'self' blob:;
+                   connect-src 'self' data:;
                    img-src     'self' data: https://i.ytimg.com;
                    frame-src   'self' https://www.youtube.com https://www.youtube-nocookie.com;
                    style-src   'self' 'unsafe-inline';">
