Add OCR settings dialog

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -577,6 +577,7 @@
                     <button id="videoReload">🔄</button>
                     <button id="ocrToggle" title="OCR an/aus (F9)">🔍</button>
                     <button id="ocrDebug" title="Debug-Fenster">🐞</button>
+                    <button id="ocrSettings" title="OCR-Einstellungen">⚙️</button>
                     <button id="videoDelete">🗑️</button>
                     <button id="videoClose">❌</button>
                 </div>
