--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -8,12 +8,10 @@
     <!-- Aktualisierte CSP: Erlaubt YouTube und Blob-Worker -->
     <meta http-equiv="Content-Security-Policy"
           content="default-src 'self';
-                   script-src  'self' 'wasm-unsafe-eval' https://www.youtube.com https://www.youtube-nocookie.com;
-                   worker-src  'self' blob:;
-                   connect-src 'self' data:;
-                   img-src     'self' data: https://i.ytimg.com;
-                   frame-src   'self' https://www.youtube.com https://www.youtube-nocookie.com;
-                   style-src   'self' 'unsafe-inline';">
+                   script-src 'self' https://www.youtube.com 'unsafe-inline';
+                   frame-src https://www.youtube.com blob:;
+                   img-src 'self' data: https://i.ytimg.com;
+                   worker-src blob:;">
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
