--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -11,7 +11,7 @@
                    script-src 'self' https://www.youtube.com 'unsafe-inline';
                    frame-src https://www.youtube.com blob:;
                    img-src 'self' data: https://i.ytimg.com;
-                   worker-src blob:;">
+                   worker-src 'self' blob:;">
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
