--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -601,6 +601,7 @@
                 </div>
             </div>
         </div>
+        <div id="dlgResizeHandle" class="dialog-resize"></div>
     </dialog>
 
     <!-- Versionsanzeige -->
