Fix Video-Dialog default visibility

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
 
-            <button id="openVideoManager" class="toolbar-btn">Videos</button>
+            <button id="openVideoManager" class="btn btn-secondary">Videos</button>
 
             <!-- Spielstart-Leiste -->
             <div class="start-bar">
